[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tensile_processing"
version = "0.0.2"
dependencies = ["matplotlib", "pandas", "numpy", "scipy"]
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["tensile_processing*"]
exclude = []
namespaces = false
